--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="./IMG/file-1/logo-1.png" alt="" />
           </div>
           <nav>
-            <a href="index2.html">Sign In</a>
+            <a href="#">Sign In</a>
             <a href="#">Create a account</a>
           </nav>
         </div>
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="third-wrapper">
           <div class="row pt-5">
-            <div class="col-md-4">
+            <div class="col-md-4 mb-5 mb-lg-0">
               <div class="p-5 mb-sm-4 mb-md-0">
                 <div class="pb-4"><img src="./IMG/file-1/Group-1.png" alt="" /></div>
                 <h1>Lightweight</h1>
@@ -91,7 +91,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mb-5 mb-lg-0">
               <div class="p-5 mb-sm-4 mb-md-0">
                 <div class="pb-4"><img src="./IMG/file-1/Group-2.png" alt="" /></div>
                 <h1>Decentralization</h1>
@@ -183,7 +183,7 @@
                     <span class="d-lg-block">one simple place with</span>
                     <span class="d-lg-block">privacy come first.</span>
                   </h2>
-                  <p>
+                  <p class="text-center">
                     Securely share and work together with Deupload’s simple file
                     storage and sharing, easy user management, unlimited file
                     size, password protected links and more.
@@ -231,7 +231,7 @@
                 </p>
               </div>
               <div class="row pt-4">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5 mb-lg-0">
                   <div class="text-center text-lg-start">
                     <div class="pb-3">
                       <img src="./IMG/file-1/group5-1.png" alt="" />
@@ -247,7 +247,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-5 mb-lg-0">
                   <div class="text-center text-lg-start">
                     <div class="pb-3">
                       <img src="./IMG/file-1/group5-2.png" alt="" />
@@ -388,7 +388,7 @@
               <h3>Ready to get started?</h3>
               <p>File storage and sharing on decentralized storage that suits any business size.</p>
             </div>
-            <div>
+            <div class="d-flex d-md-block">
               <a href="#">Create an account</a>
             </div>
           </div>
@@ -406,7 +406,7 @@
             </div>
             <div class="col-sm-12 col-lg-8 mt-sm-5 mt-lg-0">
               <div class="row">
-                <div class="col-sm-6">
+                <div class="col-6 col-sm-6">
                   <img src="./IMG/file-1/sec-8/sec8-2.png" alt="">
                   <h4>Are you business?</h4>
                   <p>Work efficiently with teammates and clients, stay in sync on projects, and keep company data safe—all in one place on decentralized network.</p>
@@ -415,7 +415,7 @@
                     <img src="./IMG/file-1/sec-8/arrow-right-long 2.png" alt="">
                   </a>
                 </div>
-                <div class="col-sm-6">
+                <div class=" col-6 col-sm-6">
                   <img width="100%" src="./IMG/file-1/sec-8/Frame8.svg" alt="">
                 </div>
               </div>
