alter in responsive1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="container">
-        <div class="header-wrapper">
+        <div class="header-wrapper d-block d-md-flex ">
           <div>
             <img src="./IMG/file-1/logo-1.png" alt="" />
           </div>
@@ -180,7 +180,7 @@
                     <span class="d-lg-block"
                       ><span>Team collaboration</span> in</span
                     >
-                    <span class="d-lg-block">one simple place with</span>
+                  <span class="d-lg-block">one simple place with</span>
                     <span class="d-lg-block">privacy come first.</span>
                   </h2>
                   <p class="text-center">
@@ -321,7 +321,7 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="text-center">
+              <div class="text-center p-2">
                 <h4>Storage</h4>
                 <p>
                   Access a complete decentralized storage with simple,
@@ -347,7 +347,7 @@
             </div>
 
             <div class="col-md-6">
-              <div>
+              <div class="text-center p-1">
                 <h4>Transfer</h4>
                 <p>
                   Pay only for what you use. There is no minimum charge. You pay
