alter in responsive1

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="four-wrapper">
           <div>
             <h1>
-              <span class="d-lg-block">Lightweight design, ready</span>
-              <span class="d-lg-block">to use for <span>team</span></span>
-              <span class="d-lg-block">productivity.</span>
+              <span >Lightweight design, ready</span>
+              <span >to use for <span>team</span></span>
+              <span >productivity.</span>
             </h1>
           </div>
           <div class="row pt-5">
@@ -176,12 +176,12 @@
             <div class="row mt-5">
               <div class="col-md-6">
                 <div>
-                  <h2>
-                    <span class="d-lg-block"
+                  <h2 class="text-center">
+                    <span 
                       ><span>Team collaboration</span> in</span
                     >
-                  <span class="d-lg-block">one simple place with</span>
-                    <span class="d-lg-block">privacy come first.</span>
+                  <span >one simple place with</span>
+                    <span >privacy come first.</span>
                   </h2>
                   <p class="text-center">
                     Securely share and work together with Deupload’s simple file
@@ -216,8 +216,8 @@
             <div class="col-md-6">
               <div class="text-center">
                 <h1>
-                  <span class="text-lg-start d-lg-block">Decentralized</span>
-                  <span class="text-lg-start d-lg-block"
+                  <span >Decentralized</span>
+                  <span 
                     >storage built for</span
                   >
                   <span class="text-lg-start d-lg-block">better privacy</span>
@@ -409,7 +409,7 @@
                 <div class="col-6 col-sm-6">
                   <img src="./IMG/file-1/sec-8/sec8-2.png" alt="">
                   <h4>Are you business?</h4>
-                  <p>Work efficiently with teammates and clients, stay in sync on projects, and keep company data safe—all in one place on decentralized network.</p>
+                  <p>Work efficiently with teammates and clients, stay in sync on projects, d network.</p>
                   <a href="#">
                     <span>See pricing</span>
                     <img src="./IMG/file-1/sec-8/arrow-right-long 2.png" alt="">
@@ -431,7 +431,9 @@
               <div>
                 <h6>What is Deupload?</h6>
                 <p>Deupload is a cloud storage services based on Blockchain and Web3 technology, designed to help teams collaborate and file sharing in a completely private like never before.</p>
-                  <img src="./IMG/file-1/footer/Secure badge.png" alt="">
+                  <div class="d-none d-sm-block">
+                    <img src="./IMG/file-1/footer/Secure badge.png" alt="" >
+                  </div>
               </div>
             </div>
             <div class="col-sm-4 col-lg-2">
